# AIOS-NP

./: .env.local.example  .gitignore  README.md  config.json  daily_news_cron.sh  install.py  new.md  news_registry.py  parallel_pipeline.py  project_paths.py  run_news_app.py  searxng功能开发.md  serial_pipeline.py  项目介绍.md
agents/ban_agent/: agent.py  config.json
agents/constructure_agent/: agent.py  (+1 more)
aios/: requirements.txt
apps/: __init__.py
cerebrum/: __init__.py  pyproject.toml  requirements.txt
cerebrum/commands/: __init__.py
cerebrum/config/: config.yaml
cerebrum/interface/: __init__.py
cerebrum/llm/: apis.py
cerebrum/memory/: apis.py
cerebrum/storage/: apis.py
cerebrum/tool/: apis.py
cerebrum/tool/core/: registry.py
cerebrum/tool/core/owen/check_tool/: config.json  entry.py
cerebrum/tool/core/owen/draw_tool/: config.json  entry.py
cerebrum/tool/core/owen/hot_api_tool/: config.json  entry.py
cerebrum/tool/core/owen/web_search_tool/: config.json  entry.py
cerebrum/utils/: __init__.py  communication.py
runtime/: launch.py  launch_kernel.sh  query_utils.py
runtime_support/: __init__.py  artifacts.py  env.py  memory.py
scripts/: install_systemd_services.sh  news_app_doctor.py  register_demo_agents.py  resume_news_run.sh  setup_local_env.sh  start_local_kernel.sh  start_news_ecosystem.sh  start_news_mcp.sh
tests/: test_agent_registry.py  test_artifact_store.py  test_editorial.py  test_hot_api_agent_runtime_tool.py  test_maker_agent.py  test_news_config.py  test_news_ecosystem.py  test_news_generation_guardrails.py  test_news_pipeline_generation_failure.py  test_news_registry.py  test_news_state.py  test_runtime_query_utils.py  test_tool_manager_local_fallback.py  test_web_search_runtime_tool.py  test_workflow_memory.py
(+67 files in other folders)
