[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-requirements-txt"]

[project]
dynamic = ["dependencies"]
description = "Cerebrum: Agent SDK for AIOS"
keywords = ["llm", "agi", "cerebrum", "os", "aios"]
name = "cerebrum"
readme = "README.md"
requires-python = ">=3.10,<3.12"
version = "0.0.3"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/agiresearch/Cerebrum"
Repository = "https://github.com/agiresearch/Cerebrum.git"

[tool.hatch.build]
include = ["."]
exclude = [
    "*.egg-info/",
    "dist",
    "__pycache__/",
    ".pytest_cache/",
    "example/",
    "example/**",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.scripts]
list-available-llms = "commands.list_available_llms:main"
run-agent = "commands.run_agent:main"
download-agent = "commands.download_agent:main"
upload-agent = "commands.upload_agent:main"
list-agenthub-agents = "commands.list_agenthub_agents:main"
list-local-agents = "commands.list_local_agents:main"
list-toolhub-tools = "commands.list_toolhub_tools:main"
list-local-tools = "commands.list_local_tools:main"
download-tool = "commands.download_tool:main"
upload-tool = "commands.upload_tool:main"
run-computer-use-agent = "cerebrum.run_cua:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["."]
